<resources>
    <string name="app_name">myapplication</string>
    <string name="servings">Servings</string>
    <string name="enter_food_item">Enter food item:</string>
    <string name="add">add</string>
    <string name="meal">Meal</string>
    <string name="amount">amount</string>
    <string name="select">select</string>
    <string name="log_item">Log item</string>
    <string name="todays_items">Today:</string>
    <string name="my_plan">My Nutrition Plan</string>
    <string-array name="meals_dropdown">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string-array name="servings_dropdown">
        <item>Cup</item>
        <item>Ib</item>
        <item>Oz</item>
        <item>Gram</item>
        <item>Piece</item>
    </string-array>
    <string name="enter_exercise">Enter exercise:</string>
    <string name="time">Time (minutes)</string>
    <string name="cals">Calories burned (optional)</string>
    <string name="today">Today:</string>
    <string name="my_exercise_plan">My Exercise Plan</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="total_calories">Total Calories:</string>
    <string-array name="time_entries">
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>1 hr</item>
    </string-array>
    <string name="search_hint">Search food or drink</string>
    <string name="title_activity_search_results">activity search results</string>
    <string name="title">Title</string>
    <string name="item_successfully_logged">item successfully logged</string>
    <string name = "search">Search </string>
    <string name="no_goal">no goal has been set</string>
    <string name="day">DAY</string>
    <string name="week">WEEK</string>
    <string name="todo">TODO</string>
</resources>