<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        tools:context=".MainActivity"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/white">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/dayTabs"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textBreakfast"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/dayTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/weekTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week" />


        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/textBreakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dayTabs"
            android:text="@string/breakfast"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textBreakfast"
            android:layout_marginStart="20dp"
            android:text="@string/no_goal"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:text="@string/lunch"

            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLunch"
            android:layout_marginStart="20dp"
            android:text="@string/no_goal"

            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:text="@string/dinner"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textDinner"
            android:layout_marginStart="20dp"
            android:text="@string/no_goal"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textSnack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:text="@string/dinner"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textSnack"
            android:layout_marginStart="20dp"
            android:text="@string/no_goal"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"

            android:src="@drawable/baseline_close_24" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>